--- a/h5/login.html
+++ b/h5/login.html
@@ -63,19 +63,19 @@
 			}
 
 			//判断用户是否登录状态
-			$.ajax({
-				url: 'http://yichuanglian.huimor.com/index/isLoginStatus',
-		        type:'get',
-		        dataType:'json',
-		        xhrFields:{  
-					withCredentials:true 
-				},  
-				success:function(data){
-		        	if(!!data.data){
-		        		location.href="index.html"
-		        	}
-		        }
-			})
+			// $.ajax({
+			// 	url: 'http://yichuanglian.huimor.com/index/isLoginStatus',
+		 //        type:'get',
+		 //        dataType:'json',
+		 //        xhrFields:{  
+			// 		withCredentials:true 
+			// 	},  
+			// 	success:function(data){
+		 //        	if(!!data.data){
+		 //        		location.href="index.html"
+		 //        	}
+		 //        }
+			// })
 
 	
 
