--- a/h5/index.html
+++ b/h5/index.html
@@ -14,7 +14,7 @@
 		<!--头部-->
 		<div class="g-head">
 			<h3>易创链</h3>
-			<p>链接IT商务线索</p>
+			<p>链接共享IT开发项目线索</p>
 			<div class="banner"></div>
 		</div>
 
@@ -22,29 +22,29 @@
 		<div class="g-content">
 			<!--商务入驻有哪些好处-->
 			<div class="subTitle">
-				<h3>商务入驻有哪些好处？</h3>
+				<h3>加入易创商务合伙人有哪些好处</h3>
 				<span></span>
 			</div>
 			<div class="m-section">
 				<div>
 					<img src="images/1-0-1.png" alt="" />
-					<h3>权益保障</h3>
-					<p>入驻及签署线上合同</p>
+					<h3>高额提成</h3>
+					<p>获得项目收入10%~30%提成；</p>
 				</div>
 				<div>
 					<img src="images/1-0-2.png" alt="" />
-					<h3>高分配提成</h3>
-					<p>提成10%~30%</p>
+					<h3>分销体系</h3>
+					<p>建立下级分销商，共享提成；</p>
 				</div>
 				<div>
 					<img src="images/1-0-3.png" alt="" />
-					<h3>专业的质量保障</h3>
-					<p>超一流专业人士护航 </p>
+					<h3>信息保密</h3>
+					<p>商务合伙人信息保密；</p>
 				</div>
 				<div>
 					<img src="images/1-0-4.png" alt="" />
-					<h3>及时商务跟踪</h3>
-					<p>商务人员一对一服务</p>
+					<h3>优质服务</h3>
+					<p>保证推荐项目的设计和研发质量；</p>
 				</div>
 			</div>
 			<div class="m-img"><img src="images/1-fgx.png" alt="" /></div>
