--- a/h5/enter.html
+++ b/h5/enter.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<title>商务入驻</title>
+	<title>加入商务合伙人</title>
 	<link rel="stylesheet" type="text/css" href="css/myAlert.min.css"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 	<script src="js/jquery.1.11.3.min.js"></script>
@@ -18,10 +18,24 @@
 				<dd><img src="images/1-1sjhao.png" alt="" /><input type="tel" maxlength="11" name="tel" placeholder="请输入11位有效手机号" /></dd>
 				<dd><img src="images/1-1mma.png" alt="" /><input type="password" placeholder="请输入6-12位数字+字母组成的密码" /></dd>
 				<dd><img src="images/1-1yzma.png" alt="" /><input type="tel" name="code" placeholder="请输入所获验证码" /><button class="code">获取验证码</button></dd>
-				<dd><button class="ruzhu">立即入驻</button></dd>
+				<dd><button class="ruzhu">立即加入</button></dd>
 			</dl>
 		</div>
 		<script type="text/javascript">
+            function GetQueryString(name) {
+                var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)","i");
+                var r = window.location.search.substr(1).match(reg);
+                if (r!=null) return (r[2]); return null;
+            }
+            var isAuth = localStorage.getItem('isauth');
+            if(!isAuth){
+                if(!GetQueryString('isauth')){
+                    var href = window.location.href
+                    location.href="http://yichuanglian.huimor.com/index?fromurl="+href;
+                }else{
+                    localStorage.setItem('isauth',1);
+                }
+            }
 			function sendOauth(){
 				$.ajax({
 			        url: 'http://yichuanglian.huimor.com/index/getOpenID',
