--- a/h5/share.html
+++ b/h5/share.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<title>易创链-分享</title>
+	<title>加入商务合伙人</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 	<script src="js/jquery.1.11.3.min.js"></script>
 	<script src="js/common.js?t=1" type="text/javascript" charset="utf-8"></script>
@@ -14,7 +14,7 @@
 		<!--头部-->
 		<div class="g-head">
 			<h3>易创链</h3>
-			<p>链接IT商务线索</p>
+			<p>成为易创商务合伙人，分享IT开发项目线索，获得10%~30%提成</p>
 			<div class="banner"></div>
 		</div>
 		
@@ -22,36 +22,51 @@
 		<div class="g-content mb0">
 			<!--商务入驻有哪些好处-->
 			<div class="subTitle">
-				<h3>商务入驻有哪些好处？</h3>
+				<h3>加入易创商务合伙人有哪些好处</h3>
 				<span></span>
 			</div>
 			<div class="m-section">
 				<div>
 					<img src="images/1-0-1.png" alt="" />
-					<h3>权益保障</h3>
-					<p>入驻及签署线上合同</p>
+					<h3>高额提成</h3>
+					<p>获得项目收入10%~30%提成；</p>
 				</div>
 				<div>
 					<img src="images/1-0-2.png" alt="" />
-					<h3>高分配提成</h3>
-					<p>提成10%~30%</p>
+					<h3>分销体系</h3>
+					<p>建立下级分销商，共享提成；</p>
 				</div>
 				<div>
 					<img src="images/1-0-3.png" alt="" />
-					<h3>专业的质量保障</h3>
-					<p>超一流专业人士护航 </p>
+					<h3>信息保密</h3>
+					<p>商务合伙人信息保密；</p>
 				</div>
 				<div>
 					<img src="images/1-0-4.png" alt="" />
-					<h3>及时商务跟踪</h3>
-					<p>商务人员一对一服务</p>
+					<h3>优质服务</h3>
+					<p>保证推荐项目的设计和研发质量；</p>
 				</div>
 			</div>
 			<div class="m-img"><img src="images/1-fgx.png" alt="" /></div>
 			<div class="m-code" ><img id="erwei" src="images/code.png" alt="" /></div>
 			<div class="m-img-tip">
-				<span class="img_tip_i"></span><em class="text_tip">长按识别二维码</em>
+				<span class="img_tip_i"></span><em class="text_tip">长按识别二维码，加入商务合伙人</em>
 			</div>
+			<div class="m-img"><img src="images/1-fgx.png" alt="" /></div>
+			<!--公司介绍-->
+			<div class="subTitle" onclick="jump()">
+				<h3 id="gsjieshao">公司介绍</h3>
+				<span></span>
+			</div>
+			<div class="m-article" onclick="jump()">
+				<img src="images/1-t1.png" alt="" />
+				<h3>专注于"企业+互联网"战略升级首选IT服务商</h3>
+				<p>通过管理咨询、互联网产品、技术以及人才服务与金融服务促进企业战略升级以及创新创业，并且首创技术VC模式，通过技术服务入股优质创业项目。</p>
+				<img src="images/1-t2.png" alt="" />
+				<h3>公司业务覆盖全国市场，总体服务客户200+，上线项目400+</h3>
+				<p>团队目前全国有100多人，均为5~10年工作经验，并且有来自于BAT、和君咨询等一些有逼格的咨询顾问、技术大牛和追求完美无暇的产品怪兽，我们只为提供优质的服务。</p>
+			</div>
+			<div class="m-img"><img src="images/1-fgx.png" alt="" /></div>
 		</div>
 	<script src="js/t3.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/home.js" type="text/javascript" charset="utf-8"></script>
