--- a/h5/share.html
+++ b/h5/share.html
@@ -71,6 +71,7 @@
 	<script src="js/t3.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/home.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript">
+		$.developSecondSales();
 		var uid = GetQueryString('uid');
 		$.ajax({
 	        url: 'http://yichuanglian.huimor.com/index/getQrCode',
