--- a/h5/buttJointSuccess.html
+++ b/h5/buttJointSuccess.html
@@ -77,6 +77,7 @@
 	</div>
 	<script type="text/javascript" src="js/html2canvas.min.js"></script>
 	<script type="text/javascript">
+			$.developSecondSales(true);
 			var hasUpLevel = false;
 			//对象化查询参数
 			function GetRequest() {
