--- a/h5/dataDetails.html
+++ b/h5/dataDetails.html
@@ -36,7 +36,7 @@
 <script type="text/javascript" src="js/html2canvas.min.js"></script>
 <script type="text/javascript" src="js/canvas2image.js"></script>
 <script type="text/javascript">
-
+	$.developSecondSales(true);
 	
 
 	function generateInfo(data){
