--- a/h5/enter.html
+++ b/h5/enter.html
@@ -22,6 +22,7 @@
 			</dl>
 		</div>
 		<script type="text/javascript">
+			$.developSecondSales(true);
             function GetQueryString(name) {
                 var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)","i");
                 var r = window.location.search.substr(1).match(reg);
