--- a/h5/feedback.html
+++ b/h5/feedback.html
@@ -16,6 +16,7 @@
 	</body>
 </html>
 <script type="text/javascript">
+	$.developSecondSales(true);
 	$(function(){
 		$('#feedBtn').click(function(){
 			$(this).prop('disabled',true);
