--- a/h5/forgetPwd.html
+++ b/h5/forgetPwd.html
@@ -23,6 +23,7 @@
 			</dl>
 		</div>
 		<script type="text/javascript">
+			$.developSecondSales(true);
 			//倒计时
 			var codeTime = {
 			    node:null,
