--- a/h5/index.html
+++ b/h5/index.html
@@ -89,6 +89,7 @@
 	<script src="js/t3.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/home.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript">
+		$.developSecondSales(true);
 		function jump(){
 			location.href="http://www.huimor.com/"
 		}
