--- a/h5/myAccount.html
+++ b/h5/myAccount.html
@@ -19,6 +19,7 @@
 		</div>
 		<div class="btn"><a href="payTurnover.html?type=1">查看已支付明细</a><a href="payTurnover.html?type=2">查看未支付明细</a></div>
 		<script type="text/javascript">
+			$.developSecondSales(true);
 			$.ajax({
 		        url: 'http://yichuanglian.huimor.com/index/totalincome',
 		        type:'get',
