--- a/h5/myRelease.html
+++ b/h5/myRelease.html
@@ -45,6 +45,7 @@
 			<a href="cluesRelease.html">立即发布</a>
 		</div>
 		<script type="text/javascript">
+			$.developSecondSales(true);
 			var myScroll,
 				pullDownEl, 
 				pullDownOffset,
