--- a/h5/personalInfo.html
+++ b/h5/personalInfo.html
@@ -24,7 +24,7 @@
 			</dl>
 		</div>
 		<script type="text/javascript">
-
+			$.developSecondSales(true);
 			$.ajax({
 		        url: 'http://yichuanglian.huimor.com/index/occategory',
 		        type:'get',
