--- a/h5/setting.html
+++ b/h5/setting.html
@@ -21,6 +21,7 @@
 		</div>
 		<button class="setBtn">退出登录</button>
 		<script type="text/javascript">
+			$.developSecondSales(true);
 			$('.setBtn').click(function(){
 				$.ajax({
 			        url: 'http://yichuanglian.huimor.com/index/loginout',
