--- a/h5/systemMessages.html
+++ b/h5/systemMessages.html
@@ -42,7 +42,7 @@
 	</body>
 </html>
 <script type="text/javascript">
-
+	$.developSecondSales(true);
 	var myScroll,
 		pullDownEl, 
 		pullDownOffset,
