--- a/h5/buttJointDetails.html
+++ b/h5/buttJointDetails.html
@@ -58,6 +58,7 @@
 			
 		<script type="text/javascript" src="js/html2canvas.min.js"></script>
 		<script type="text/javascript">
+			$.developSecondSales(true);
 			//对象化查询参数
 			function GetRequest() {
 				var url = location.search; //获取url中"?"符后的字串
