--- a/h5/buttJointError.html
+++ b/h5/buttJointError.html
@@ -62,6 +62,7 @@
 		</div>
 		<script type="text/javascript" src="js/html2canvas.min.js"></script>
 		<script type="text/javascript">
+			$.developSecondSales(true);
 			//对象化查询参数
 			function GetRequest() {
 				var url = location.search; //获取url中"?"符后的字串
