--- a/h5/cluesRelease.html
+++ b/h5/cluesRelease.html
@@ -8,8 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/myAlert.min.css"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 	<script src="js/jquery.1.11.3.min.js"></script>
-
-	<script src="js/common.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/common.js?t=111111" type="text/javascript" charset="utf-8"></script>
 </head>
 	<body>
 		<!--内容-->
@@ -75,6 +74,7 @@
 			</div>
 		</div>
 		<script type="text/javascript">
+			$.developSecondSales(true);
 			//	获取行业
 			$.ajax({
 		        url: 'http://yichuanglian.huimor.com/index/getIndustry',
