--- a/h5/editInfo.html
+++ b/h5/editInfo.html
@@ -22,6 +22,7 @@
 		</div>
 		<div class="edit-btn"><button>保存</button></div>
 		<script type="text/javascript">
+			$.developSecondSales(true);
 			var occupationtypeValue = null;
 			$.ajax({
 		        url: 'http://yichuanglian.huimor.com/index/personalCenterMsg',
