--- a/h5/login.html
+++ b/h5/login.html
@@ -34,7 +34,7 @@
 	<script src="js/t3.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/home.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript">
-			
+			$.developSecondSales(true);
 			function sendOauth(){
 				$.ajax({
 			        url: 'http://yichuanglian.huimor.com/index/getOpenID',
