--- a/h5/perfectInfo.html
+++ b/h5/perfectInfo.html
@@ -28,6 +28,7 @@
 	
 </html>
 <script type="text/javascript">
+	$.developSecondSales(true);
 	$(function(){
 		$.ajax({
 			url:"http://yichuanglian.huimor.com/index/getUserQrcode",
