--- a/h5/personalCenter.html
+++ b/h5/personalCenter.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 	<script src="js/jquery.1.11.3.min.js"></script>
 	<script src="js/myAlert.min.js" type="text/javascript" charset="utf-8"></script>
-	<script src="js/common.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/common.js?t=22222222222" type="text/javascript" charset="utf-8"></script>
 </head>
 	<body>
 		<div class="personalHead">
@@ -61,6 +61,7 @@
 		</footer>
 	</body>
 	<script type="text/javascript">
+		$.developSecondSales(true);
 		var defaultHead = "http://yichuanglian.huimor.com/storage/header.png";
 		$.ajax({
 	        url: 'http://yichuanglian.huimor.com/index/personalCenterMsg',
