--- a/h5/salesInfo.html
+++ b/h5/salesInfo.html
@@ -50,7 +50,7 @@
 	</body>
 </html>
 <script type="text/javascript">
-
+	$.developSecondSales(true);
 	var type = GetQueryString('type');
 	var userId = GetQueryString('userId');
 	var id = GetQueryString('id');
