--- a/h5/index.html
+++ b/h5/index.html
@@ -53,6 +53,9 @@
 				<h3 id="gsjieshao">公司介绍</h3>
 				<span></span>
 			</div>
+			<div class="intro_btn">
+				<a href="http://www.huimor.com/">进入官网</a>
+			</div>
 			<div class="m-article" onclick="jump()">
 				<img src="images/1-t1.png" alt="" />
 				<h3>专注于"企业+互联网"战略升级首选IT服务商</h3>
