--- a/h5/index.html
+++ b/h5/index.html
@@ -29,22 +29,22 @@
 				<div>
 					<img src="images/1-0-1.png" alt="" />
 					<h3>高额提成</h3>
-					<p>获得项目收入10%~30%提成；</p>
+					<p>获得项目收入10%~30%提成</p>
 				</div>
 				<div>
 					<img src="images/1-0-2.png" alt="" />
 					<h3>分销体系</h3>
-					<p>建立下级分销商，共享提成；</p>
+					<p style="text-align:right;">建立下级分销商，共享提成</p>
 				</div>
 				<div>
 					<img src="images/1-0-3.png" alt="" />
 					<h3>信息保密</h3>
-					<p>商务合伙人信息保密；</p>
+					<p>商务合伙人信息保密</p>
 				</div>
 				<div>
 					<img src="images/1-0-4.png" alt="" />
 					<h3>优质服务</h3>
-					<p>保证推荐项目的设计和研发质量；</p>
+					<p style="text-align:right;">保证推荐项目的设计和研发质量</p>
 				</div>
 			</div>
 			<div class="m-img"><img src="images/1-fgx.png" alt="" /></div>
