--- a/h5/index.html
+++ b/h5/index.html
@@ -61,7 +61,7 @@
 				<h3>专注于"企业+互联网"战略升级首选IT服务商</h3>
 				<p>通过管理咨询、互联网产品、技术以及人才服务与金融服务促进企业战略升级以及创新创业，并且首创技术VC模式，通过技术服务入股优质创业项目。</p>
 				<img src="images/1-t2.png" alt="" />
-				<h3>公司业务覆盖全国市场，总体服务客户200+，上线项目400+</h3>
+				<h3>公司业务覆盖全国市场，<br>总体服务客户200+，上线项目400+</h3>
 				<p>团队目前全国有100多人，均为5~10年工作经验，并且有来自于BAT、和君咨询等一些有逼格的咨询顾问、技术大牛和追求完美无暇的产品怪兽，我们只为提供优质的服务。</p>
 			</div>
 		</div>
