--- a/h5/share.html
+++ b/h5/share.html
@@ -10,14 +10,14 @@
 	<script src="js/common.js?t=1" type="text/javascript" charset="utf-8"></script>
 </head>
 	<body>
-		
+
 		<!--头部-->
 		<div class="g-head">
 			<h3>易创链</h3>
 			<p>成为易创商务合伙人，分享IT开发项目线索，获得10%~30%提成</p>
 			<div class="banner"></div>
 		</div>
-		
+
 		<!--内容-->
 		<div class="g-content mb0">
 			<!--商务入驻有哪些好处-->
@@ -54,16 +54,20 @@
 			</div>
 			<div class="m-img"><img src="images/1-fgx.png" alt="" /></div>
 			<!--公司介绍-->
+			<!--公司介绍-->
 			<div class="subTitle" onclick="jump()">
 				<h3 id="gsjieshao">公司介绍</h3>
 				<span></span>
+			</div>
+			<div class="intro_btn">
+				<a href="http://www.huimor.com/">进入官网</a>
 			</div>
 			<div class="m-article" onclick="jump()">
 				<img src="images/1-t1.png" alt="" />
 				<h3>专注于"企业+互联网"战略升级首选IT服务商</h3>
 				<p>通过管理咨询、互联网产品、技术以及人才服务与金融服务促进企业战略升级以及创新创业，并且首创技术VC模式，通过技术服务入股优质创业项目。</p>
 				<img src="images/1-t2.png" alt="" />
-				<h3>公司业务覆盖全国市场，总体服务客户200+，上线项目400+</h3>
+				<h3>公司业务覆盖全国市场，<br>总体服务客户200+，上线项目400+</h3>
 				<p>团队目前全国有100多人，均为5~10年工作经验，并且有来自于BAT、和君咨询等一些有逼格的咨询顾问、技术大牛和追求完美无暇的产品怪兽，我们只为提供优质的服务。</p>
 			</div>
 			<div class="m-img"><img src="images/1-fgx.png" alt="" /></div>
@@ -72,6 +76,9 @@
 	<script src="js/home.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript">
 		$.developSecondSales();
+		function jump(){
+			location.href="http://www.huimor.com/"
+		}
 		var uid = GetQueryString('uid');
 		$.ajax({
 	        url: 'http://yichuanglian.huimor.com/index/getQrCode',
@@ -80,9 +87,9 @@
 	        data:{
 	        	uid:uid
 	        },
-	        xhrFields:{  
+	        xhrFields:{
 				withCredentials:true
-			},  
+			},
 			success:function(data){
 				var erwei = $('#erwei');
 				if(data.code==1){
