--- a/h5/dataDetails.html
+++ b/h5/dataDetails.html
@@ -86,7 +86,7 @@
 		        			'<dd><span>分销商姓名：</span><div>'+(data.username || "")+'</div></dd>',
 							'<dd><span>与我的关系：</span><div>'+data.level+'</div></dd>',
 							'<dd><span>联系电话：</span><div>'+(data.mobile || "")+'</div></dd>',
-							'<dd><span>微信号码：</span><div>'+(data.wxnumber || "")+'</div></dd>',
+							//'<dd><span>微信号码：</span><div>'+(data.wxnumber || "")+'</div></dd>',
 							'<dd><span>微信昵称：</span><div>'+(data.wxname || "")+'</div></dd>',
 							'<dd><span>微信头像：</span><div><img src="'+data.wximage+'" alt="'+data.level+'头像" onerror="javascript:this.src='+defaultHead+';" /></div></dd>'
 		        		];
