--- a/h5/salesInfo.html
+++ b/h5/salesInfo.html
@@ -107,7 +107,7 @@
 			'<dd><span>分销商姓名：</span><div>'+data.username+'</div></dd>',
 			'<dd><span>与我的关系：</span><div>'+data.lianxi+'</div></dd>',
 			'<dd><span>联系电话：</span><div>'+data.mobile+'</div></dd>',
-			'<dd><span>微信号码：</span><div>'+data.wxnumber+'</div></dd>',
+			//'<dd><span>微信号码：</span><div>'+data.wxnumber+'</div></dd>',
 			'<dd><span>微信昵称：</span><div>'+data.wxname+'</div></dd>',
 			'<dd><span>微信头像：</span><div><img src="'+data.wximage+'" alt="" /></div></dd>'
 		].join('');
@@ -134,7 +134,7 @@
 			'<dd><span>分销商姓名：</span><div>'+user.username+'</div></dd>',
 			'<dd><span>与我的关系：</span><div>'+user.lianxi+'</div></dd>',
 			'<dd><span>联系电话：</span><div>'+user.mobile+'</div></dd>',
-			'<dd><span>微信号码：</span><div>'+user.wxnumber+'</div></dd>',
+			//'<dd><span>微信号码：</span><div>'+user.wxnumber+'</div></dd>',
 			'<dd><span>微信昵称：</span><div>'+user.wxname+'</div></dd>',
 			'<dd><span>微信头像：</span><div><img src="'+user.wximage+'" alt="" /></div></dd>'
 		].join('');
