--- a/h5/index.html
+++ b/h5/index.html
@@ -76,6 +76,12 @@
 					</a>
 				</div>
 				<div>
+					<a href="myCode.html">
+						<img src="images/1-1fzxji@2x.png" alt="" style="width:0.5rem;" />
+						<p>发展下级</p>
+					</a>
+				</div>
+				<div>
 					<a href="cluesRelease.html">
 						<img src="images/1-1xauo1.png" alt="" />
 						<p>发布线索</p>
