--- a/h5/cluesRelease.html
+++ b/h5/cluesRelease.html
@@ -21,9 +21,9 @@
 			<div class="flow">
 				<img src="images/2-1lct.png" alt="" />
 			</div>
-			
+
 			<div class="m-img"><img src="images/1-fgx.png" alt="" /></div>
-			
+
 			<div class="subTitle">
 				<h3>填写线索信息</h3>
 				<span></span>
@@ -49,6 +49,12 @@
 						<p>商务入驻</p>
 					</a>
 				</div>
+				<div>
+					<a href="myCode.html">
+						<img src="images/1-1fzxji@2x.png" alt="" style="width:0.5rem;" />
+						<p>发展下级</p>
+					</a>
+				</div>
 				<div class="active">
 					<a href="#">
 						<img src="images/1-1xauo2.png" alt="" />
@@ -61,9 +67,10 @@
 						<p>个人中心</p>
 					</a>
 				</div>
+
 			</div>
 		</footer>
-		
+
 		<!--行业弹出-->
 		<div class="industryTanchu">
 			<div class="industryBox">
@@ -80,9 +87,9 @@
 		        url: 'http://yichuanglian.huimor.com/index/getIndustry',
 		        type:'get',
 		        dataType:'json',
-		        xhrFields:{  
-					withCredentials:true  
-				},  
+		        xhrFields:{
+					withCredentials:true
+				},
 		        success:function(data){
 		        	if(data.code==1){
 			        	var data=data.data;
