--- a/h5/myCode.html
+++ b/h5/myCode.html
@@ -9,7 +9,7 @@
 	<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 	<script src="js/jquery.1.11.3.min.js"></script>
 	<script src="js/common.js?t=23521" type="text/javascript" charset="utf-8"></script>
-	
+
 </head>
 	<body>
 		<div class="fixed-bg"></div>
@@ -23,44 +23,59 @@
 		<div class="myCode-btn" id="shareBtn"><button>发展二级分销商</button></div>
 	</body>
 	<script type="text/javascript">
-		
-		$.ajax({
-	        url: 'http://yichuanglian.huimor.com/index/development',
-	        type:'get',
-	        dataType:'json',
-	        data:{
-	        	url: window.location.href
-	        },
-	        xhrFields:{  
-				withCredentials:true  
-			},  
-	        success:function(data){
-	        	var appId  = data.data.appId;
-	        	var nonceStr  = data.data.nonceStr;
-	        	var timestamp  = data.data.timestamp;
-	        	var signature  = data.data.signature;	
-	        	var uid = data.data.userid;
+		//判断用户是否登录状态
+				$.ajax({
+					url: 'http://yichuanglian.huimor.com/index/isLoginStatus',
+			        type:'get',
+			        dataType:'json',
+			        xhrFields:{
+						withCredentials:true
+					},
+					success:function(data){
+			        	if(!!data.data){
+											$.ajax({
+									        url: 'http://yichuanglian.huimor.com/index/development',
+									        type:'get',
+									        dataType:'json',
+									        data:{
+									        	url: window.location.href
+									        },
+									        xhrFields:{
+												withCredentials:true
+											},
+									        success:function(data){
+									        	var appId  = data.data.appId;
+									        	var nonceStr  = data.data.nonceStr;
+									        	var timestamp  = data.data.timestamp;
+									        	var signature  = data.data.signature;
+									        	var uid = data.data.userid;
 
-	        	localStorage.setItem("uid",uid);
+									        	localStorage.setItem("uid",uid);
 
-	    		wx.config({
-				    debug: false, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
-				    appId: appId, // 必填，公众号的唯一标识     
-				　　timestamp: timestamp, // 必填，生成签名的时间戳
-				    nonceStr: nonceStr, // 必填，生成签名的随机串
-				    signature: signature,// 必填，签名，见附录1
-				    jsApiList: [
-				    	'onMenuShareTimeline',
-				    	'onMenuShareAppMessage',
-				    	'onMenuShareQQ',
-				    	'onMenuShareWeibo',
-				    	'onMenuShareQZone'
-			    	] // 必填，需要使用的JS接口列表，所有JS接口列表见附录2
+									    		wx.config({
+												    debug: false, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
+												    appId: appId, // 必填，公众号的唯一标识
+												　　timestamp: timestamp, // 必填，生成签名的时间戳
+												    nonceStr: nonceStr, // 必填，生成签名的随机串
+												    signature: signature,// 必填，签名，见附录1
+												    jsApiList: [
+												    	'onMenuShareTimeline',
+												    	'onMenuShareAppMessage',
+												    	'onMenuShareQQ',
+												    	'onMenuShareWeibo',
+												    	'onMenuShareQZone'
+											    	] // 必填，需要使用的JS接口列表，所有JS接口列表见附录2
+												});
+									    		$.shareAction();
+									        }
+									    });
+
+			        	}else{
+										location.href="login.html"
+			        	}
+		        }
 				});
-	    		$.shareAction();
-	        }
-	    });
 
-	    
+
 	</script>
 </html>
