--- a/h5/login.html
+++ b/h5/login.html
@@ -24,7 +24,7 @@
 			<dl>
 				<dd><img src="images/1-1sjhao.png" alt="" /><input type="tel" name='tel' maxlength="11" placeholder="请输入11位有效手机号" /></dd>
 				<dd><img src="images/1-1mma.png" alt="" /><input type="password" name="password" placeholder="请输入6-12位数字+字母组成的密码" /></dd>
-				<dd><a href="enter.html">立即入驻</a><a href="forgetPwd.html">忘记密码</a></dd>
+				<dd><a href="enter.html">立即入驻</a><a href="javascript:;"></a></dd>
 			</dl>
 		</div>
 		
