--- a/h5/login.html
+++ b/h5/login.html
@@ -23,7 +23,7 @@
 		<div class="enter-form login-form">
 			<dl>
 				<dd><img src="images/1-1sjhao.png" alt="" /><input type="tel" name='tel' maxlength="11" placeholder="请输入11位有效手机号" /></dd>
-				<dd><img src="images/1-1mma.png" alt="" /><input type="password" name="password" placeholder="请输入6-12位数字+字母组成的密码" /></dd>
+				<dd><img src="images/1-1yzma.png" alt="" /><input type="tel" name="code" placeholder="请输入所获验证码" /><button class="code">获取验证码</button></dd>
 				<dd><a href="enter.html">立即入驻</a><a href="javascript:;"></a></dd>
 			</dl>
 		</div>
@@ -63,25 +63,82 @@
 			}
 
 			//判断用户是否登录状态
-			// $.ajax({
-			// 	url: 'http://yichuanglian.huimor.com/index/isLoginStatus',
-		 //        type:'get',
-		 //        dataType:'json',
-		 //        xhrFields:{  
-			// 		withCredentials:true 
-			// 	},  
-			// 	success:function(data){
-		 //        	if(!!data.data){
-		 //        		location.href="index.html"
-		 //        	}
-		 //        }
-			// })
+			$.ajax({
+				url: 'http://yichuanglian.huimor.com/index/isLoginStatus',
+		        type:'get',
+		        dataType:'json',
+		        xhrFields:{  
+					withCredentials:true 
+				},  
+				success:function(data){
+		        	if(!!data.data){
+		        		location.href="index.html"
+		        	}
+		        }
+			})
 
-	
+			
+			//倒计时
+			var codeTime = {
+			    node:null,
+			    count:60,
+			    start:function(){
+				    if(this.count > 0){
+				        this.node.innerHTML = this.count--+"秒后发送";
+				    	var _this = this;
+					    setTimeout(function(){
+					        _this.start();
+					    },1000);
+					}else{
+					    this.node.removeAttribute("disabled");
+					 	this.node.innerHTML = "再次发送";
+					    this.count = 60;
+					}
+				},
+				//初始化
+			   init:function(node){
+			      this.node = node;
+			      this.node.setAttribute("disabled",true);
+			      this.start();
+			   }
+			};
+			
+			//  验证码
+			$('.code').click(function(){
+				var tel = $('input[name="tel"]').val();
+				var _this = this;
+				var telReg = /^[1][3,4,5,7,8][0-9]{9}$/; 
+				if ((tel=='') || (tel.length!=11) || !telReg.test(tel)) {
+					$.toastTip({
+						img:'images/4-3gxfkui.png',
+						imgW:'1.56rem',
+						imgH:'1.5rem',
+						text:['手机号码不正确']
+					});
+				} else {
+					$.ajax({
+				        url: 'http://yichuanglian.huimor.com/index/getsms',
+				        type:'post',
+				        data:{
+				        	mobile:tel,
+				            type:'2',
+				        },
+				        xhrFields:{  
+							withCredentials:true  
+						},  
+				        dataType:'json',
+				        success:function(data){
+				        	if(isLogin(data)){
+			        			codeTime.init(_this);
+				           	}	
+				        }
+				    });
+			    }
+			});
 
 			$('.login-btn button').click(function(){
 				var tel=$('input[name="tel"]').val();
-				var pwd=$('input[name="password"]').val();
+				var code=$('input[name="code"]').val();
 				var telReg = /^[1][3,4,5,7,8][0-9]{9}$/; 
 				if((tel=='')||(tel.length!=11) || !telReg.test(tel)){
 					$.toastTip({
@@ -90,12 +147,12 @@
 						imgH:'1.5rem',
 						text:['手机号码不正确']
 					});
-				} else if(pwd==''){
+				} else if(code==''){
 					$.toastTip({
 						img:'images/4-3gxfkui.png',
 						imgW:'1.56rem',
 						imgH:'1.5rem',
-						text:['密码不能为空']
+						text:['验证码不能为空']
 					});
 				} else {
 					$.ajax({
@@ -103,7 +160,8 @@
 				        type:'post',
 				        data:{
 				            mobile:tel,
-				            password:pwd,
+				            smscode:code,
+				            type: 3,
 				        },
 				        dataType:'json',
 				        xhrFields:{  
