--- a/h5/enter.html
+++ b/h5/enter.html
@@ -22,6 +22,12 @@
 			</dl>
 		</div>
 		<script type="text/javascript">
+            if(!GetQueryString('isauth')){
+                var href = window.location.href
+                location.href="http://yichuanglian.huimor.com/index?fromurl="+href;
+            }else{
+                localStorage.setItem('isauth',1);
+            }
 			$.developSecondSales(true);
 			function sendOauth(){
 				$.ajax({
