--- a/h5/login.html
+++ b/h5/login.html
@@ -121,7 +121,7 @@
 				        type:'post',
 				        data:{
 				        	mobile:tel,
-				            type:'2',
+				            type:'3',
 				        },
 				        xhrFields:{  
 							withCredentials:true  
@@ -160,8 +160,7 @@
 				        type:'post',
 				        data:{
 				            mobile:tel,
-				            smscode:code,
-				            type: 3,
+				            smscode:code
 				        },
 				        dataType:'json',
 				        xhrFields:{  
