--- a/h5/setting.html
+++ b/h5/setting.html
@@ -15,7 +15,7 @@
 		<div class="fixed-bg"></div>
 		
 		<div class="setList">
-			<div><a href="changePwd.html"><img src="images/4-0xgmma.png" alt="" /><span>修改密码</span><i></i></a></div>
+	<!-- 		<div><a href="changePwd.html"><img src="images/4-0xgmma.png" alt="" /><span>修改密码</span><i></i></a></div> -->
 			<div><a href="feedback.html"><img src="images/4-0yjfk.png" alt="" /><span>意见反馈</span><i></i></a></div>
 			<div><a href="http://www.huimor.com"><img src="images/4-0gypt.png" alt="" /><span>关于平台</span><i></i></a></div>
 		</div>
