--- a/h5/editInfo.html
+++ b/h5/editInfo.html
@@ -17,7 +17,7 @@
 			<dl>
 				<dd><span class="sign">姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名：</span><div><input type="text" name='username' placeholder="请输入姓名" /></div></dd>
 				<dd><span>所在公司：</span><div><input type="text" name="company" placeholder="请输入所在公司名称" /></div></dd>
-				<dd class="selectProfession"><span class="sign">职业类型：</span><div><p></p><i></i></div></dd>
+				<!-- <dd class="selectProfession"><span class="sign">职业类型：</span><div><p></p><i></i></div></dd> -->
 			</dl>
 		</div>
 		<div class="edit-btn"><button>保存</button></div>
@@ -36,7 +36,7 @@
 		        		var data=data.data[0];
 		            	$('input[name="username"]').val(data.username);
 		            	$('input[name="company"]').val(data.company);
-		            	$('.selectProfession p').text(data.name);
+		            	// $('.selectProfession p').text(data.name);
 		            	occupationtypeValue = data.occupationtype
 		        	}
 		        }
@@ -46,22 +46,22 @@
 		    	
 		    	var username=$('input[name="username"]').val();
             	var company=$('input[name="company"]').val();
-            	var occupationtype=$('.selectProfession p').data('id') || occupationtypeValue;
+            	//var occupationtype=$('.selectProfession p').data('id') || occupationtypeValue;
+            	 /*if(!occupationtype){
+            		$.toastTip({
+						img:'images/4-3gxfkui.png',
+						imgW:'1.56rem',
+						imgH:'1.5rem',
+						text:['职业类型必填']
+					});
 
+            	}*/
             	if(!username){
             		$.toastTip({
 						img:'images/4-3gxfkui.png',
 						imgW:'1.56rem',
 						imgH:'1.5rem',
 						text:['姓名必填']
-					});
-
-            	}else if(!occupationtype){
-            		$.toastTip({
-						img:'images/4-3gxfkui.png',
-						imgW:'1.56rem',
-						imgH:'1.5rem',
-						text:['职业类型必填']
 					});
 
             	}else{
@@ -72,7 +72,7 @@
 				        data:{
 				        	username:username,
 				        	company:company,
-				        	occupationtype:occupationtype
+				        	//occupationtype:occupationtype
 				        },
 				        dataType:'json',
 				        xhrFields:{  
